src/main/java/com/example/oner/error/exception/CustomException.java
package com.example.oner.error.exception;

import com.example.oner.error.errorcode.ErrorCode;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;
}